--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-mailcoach-editor",
+    "name": "1986webdeveloper/laravel-maillit-editor",
     "description": "An Editor editor package for Mailcoach",
     "keywords": [
         "spatie",
@@ -21,7 +21,7 @@
         "php": "^8.1",
         "ext-json": "*",
         "scrivo/highlight.php": "^v9.18",
-        "spatie/laravel-mailcoach": "^6.0",
+        "1986webdeveloper/laravel-maillit": "dev-main",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
